# bean-fetch

./: .gitignore  default.nix  mypy.ini  pyproject.toml  pytest.ini  readme.md  setup.cfg  shell.nix
bean_fetch/: data.py  main.py
bean_fetch/fetchers/: coinbase.py  coinbasepro.py
bean_fetch/venues/: coinbase.py  ethereum.py
bean_fetch/venues/coinbasepro/: client.py  data.py  venue.py
nix/: sources.json
scripts/: mk_eth_data.sh
