[tool.poetry]
name = "bean-fetch"
version = "0.1.0"
description = ""
authors = ["David Terry <me@xwvvvvwx.com>"]

[tool.poetry.scripts]
bean-fetch = 'bean_fetch.main:main'

[tool.poetry.dependencies]
python = "^3.7"
beancount = "^2.2"
pyyaml = "^5.1"
coinbase = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"
mypy = "^0.701.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
