[tool.poetry]
name = "bean-fetch"
version = "0.1.0"
description = ""
authors = ["David Terry <me@xwvvvvwx.com>"]

[tool.poetry.scripts]
bean-fetch = 'bean_fetch.main:main'

[tool.poetry.dependencies]
python = "^3.7"
beancount = "^2.2"
pyyaml = "^5.1"
coinbase = "^2.1"
cbpro = "^1.1"
jsonpickle = "^1.2"
pydantic = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"
mypy = "^0.701.0"
rope = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
