[tool.poetry]
name = "bean-fetch"
version = "0.0.0"
description = ""
authors = ["David Terry <me@xwvvvvwx.com>"]

[tool.poetry.scripts]
bean-fetch = 'bean_fetch.main:main'

[tool.poetry.dependencies]
python = "^3.7"
beancount = "^2.3.2"
pyyaml = "^5.3.1"
coinbase = "^2.1"
pydantic = "^1.6.1"
requests = "^2.24"
web3 = "^5.12.1"
jsonpickle = "^1.4.1"
eth-typing = "^2.2.2"
dataclasses-json = "^0.5.2"

[tool.poetry.dev-dependencies]
python-language-server = "^0.35.0"
pylint = "^2.6"
mypy = "^0.782.0"
rope = "^0.17.0"
pyls-mypy = "^0.1.8"
pyls-isort = "^0.2.0"
jedi = "^0.17.2"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
